# playerdemo

./: settings.gradle  sign.jks
app/: build.gradle
app/src/androidTest/java/panyi/xyz/playerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  simple_player.cpp  simple_player.h
app/src/main/java/panyi/xyz/playerdemo/: MainActivity.java  SimplePlayerBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/panyi/xyz/playerdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
